list.html is better, css files removed

--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -38,7 +38,7 @@
         </p>
       </div>
       <div class="bg-white p-8 rounded-3xl text-center shadow-md hover:shadow-xl transition-transform transform hover:-translate-y-1 border border-gray-200">
-        <h3 class="text-xl font-semibold text-gray-800 mb-4">Practice</h3>
+        <a h3 class="text-xl font-semibold text-gray-800 mb-4" href="{{ url_for('practice.show_list') }}" >Practice</a>
         <p class="text-gray-600 leading-relaxed">
           Challenge yourself with practice questions
         </p>
